<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bowers.alex.jumpy.SplashScreen"
    android:background="#687fff"
    android:id="@+id/SplashScreenView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:text="@string/app_name"
        android:id="@+id/AppNameSplash"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/created_by"
        android:id="@+id/CreatedBySplash"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:text="@string/version_no"
        android:id="@+id/VersionSplash"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MainMenu"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_menu_single_player"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/MainMenuSinglePlayer"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick="onClickSinglePlayer"
            android:clickable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_menu_multi_player"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/MainMenuMultiPlayer"
            android:layout_below="@+id/MainMenuSinglePlayer"
            android:onClick="onClickMultiPlayer"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_menu_leader_board"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/MainMenuLeaderboard"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/MainMenuMultiPlayer"
            android:onClick="onClickLeaderboard"
            android:clickable="true"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/main_menu_achievements"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:id="@+id/MainMenuAchievements"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/MainMenuLeaderboard"
            android:onClick="onClickAchievements"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:textColorHighlight="@color/purple" />
    </RelativeLayout>
</RelativeLayout>
